# project1_bazhenov_arseny_M25-555

./: README.md  pyproject.toml
labyrinth_game/: constants.py  main.py  player_actions.py  utils.py
