[project]
name = "project1-bazhenov-arseny-m25-555"
version = "0.1.0"
description = ""
authors = [
    {name = "RRifen",email = "gorbaty.kit@gmail.com"}
]
requires-python = ">=3.14"
dependencies = [
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [
    { include = "labyrinth_game" },
]

[tool.poetry.scripts]
project = "labyrinth_game.main:main"

[tool.ruff]
line-length = 88
target-version = "py311"
exclude = ["venv", ".venv", "dist", "__pycache__"]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []

[dependency-groups]
dev = [
    "ruff (>=0.14.5,<0.15.0)"
]
